-About: enlaces con gradiente de colores de fondo. -mat-fab botones de acciones de generacion/validacion/exportación/calculo -> clase "botonRotatorio" para hacer girar el icono con el raton encima de ellos

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,8 +11,8 @@
   <br/>
   <section>
     <h3>GitHub</h3>
-    <div>
-      <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
+    <div class="efectoCircular">
+      <img  src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
       <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">angular-j-generadores-fe2</a>
     </div>
   </section>
