--- a/src/app/genera-cuentas/genera-cuentas.component.html
+++ b/src/app/genera-cuentas/genera-cuentas.component.html
@@ -17,15 +17,15 @@
       <mat-card appearance="outlined">
         <mat-card-header>Generar IBANs</mat-card-header>
         <mat-card-content>
-          <button type="button"  mat-fab aria-label="Generar una lista de IBANs" (click)="onClickBotonGenerarListaIban()"
+          <button type="button"  mat-fab class="botonRotatorio" aria-label="Generar una lista de IBANs" (click)="onClickBotonGenerarListaIban()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
-          <button type="button" *ngIf="listaIban?.length && listaIban.length > 0" style="margin-left: 5px;"  mat-fab aria-label="Limpiar listas" (click)="onClickLimpiarListaIBAN()"
+          <button type="button" *ngIf="listaIban?.length && listaIban.length > 0" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar listas" (click)="onClickLimpiarListaIBAN()"
             matTooltip="Pulsar para limpiar la lista de IBANs" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
-          <button type="button" *ngIf="listaIban?.length && listaIban.length > 0" style="margin-left: 5px;" mat-fab aria-label="Exportar a Excel" (click)="exportJsonIban()"
+          <button type="button" *ngIf="listaIban?.length && listaIban.length > 0" style="margin-left: 5px;" mat-fab class="botonRotatorio" aria-label="Exportar a Excel" (click)="exportJsonIban()"
             matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
             <mat-icon>description</mat-icon>
           </button>
@@ -61,15 +61,15 @@
               }
             </mat-select>
           </mat-form-field>
-          <button type="button" mat-fab style="margin-left: 5px;" aria-label="Generar una lista de Tarjetas" (click)="onClickBotonGenerarListaTarjetas()"
+          <button type="button" mat-fab class="botonRotatorio" style="margin-left: 5px;" aria-label="Generar una lista de Tarjetas" (click)="onClickBotonGenerarListaTarjetas()"
             matTooltip="Pulsar para generar" matTooltipPosition="below">
             <mat-icon>refresh</mat-icon>
           </button>
-          <button type="button" *ngIf="listaTarjeta?.length && listaTarjeta.length > 0" style="margin-left: 5px;"  mat-fab aria-label="Limpiar listas" (click)="onClickLimpiarListaTarjetas()"
+          <button type="button" *ngIf="listaTarjeta?.length && listaTarjeta.length > 0" style="margin-left: 5px;"  mat-fab class="botonRotatorio" aria-label="Limpiar listas" (click)="onClickLimpiarListaTarjetas()"
             matTooltip="Pulsar para limpiar la lista de Tarjetas" matTooltipPosition="below">
             <mat-icon>delete</mat-icon>
           </button>
-          <button type="button" *ngIf="listaTarjeta?.length && listaTarjeta.length > 0" style="margin-left: 5px;" mat-fab aria-label="Exportar a Excel" (click)="exportJsonTarjetas()"
+          <button type="button" *ngIf="listaTarjeta?.length && listaTarjeta.length > 0" style="margin-left: 5px;" mat-fab class="botonRotatorio" aria-label="Exportar a Excel" (click)="exportJsonTarjetas()"
             matTooltip="Pulsar para exportar excel" matTooltipPosition="below">
             <mat-icon>description</mat-icon>
           </button>
@@ -111,7 +111,7 @@
               <input matInput id="ibanValidar" type="text" placeholder="ES0920007083880013231063" [(ngModel)]="ibanValidar"
                 style="text-transform:uppercase;" maxlength="35">
             </mat-form-field>
-            <button type="button" mat-fab aria-label="Validar un IBAN" (click)="onClickValidarIban()"
+            <button type="button" mat-fab class="botonRotatorio" aria-label="Validar un IBAN" (click)="onClickValidarIban()"
               matTooltip="Pulsar para validar" matTooltipPosition="below" style="margin-left: 5px;">
               <mat-icon>search_check</mat-icon>
             </button>
@@ -143,7 +143,7 @@
               <input matInput id="tarjetaValidar" type="text" placeholder="4846891122550579" [(ngModel)]="tarjetaValidar"
                 style="text-transform:uppercase" size="12">
             </mat-form-field>
-            <button type="button" mat-fab aria-label="Validar una Tarjeta" (click)="onClickValidarTarjeta()"
+            <button type="button" mat-fab class="botonRotatorio" aria-label="Validar una Tarjeta" (click)="onClickValidarTarjeta()"
               matTooltip="Pulsar para validar" matTooltipPosition="below" style="margin-left: 5px;">
               <mat-icon>search_check</mat-icon>
             </button>
